--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,27 +58,21 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/person.png
+    - assets/svgs/apple.svg
+    - assets/svgs/google.svg
+    - assets/svgs/eyeOff.svg
+    - assets/svgs/notification.svg
+    - assets/svgs/settings.svg
+    - assets/svgs/graph.svg
+    - assets/svgs/activity.svg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: mont
+      fonts:
+        - asset: assets/fonts/montHeavy.otf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
